// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth:login succeeds when no organization flag is passed, and uses the first available org instead 1`] = `
"
    Successfully logged in!
    Close your browser to continue.

    You are currently logged in:
    Organization: the_first_org_available
    Region: us
    Environment: prod
    
To change organization, run coveo auth:login --help to see the available options to log in to a different organization, region, or environment.
"
`;

exports[`auth:login succeeds when organization flag is valid 1`] = `
"
    Successfully logged in!
    Close your browser to continue.

    You are currently logged in:
    Organization: foo
    Region: us
    Environment: prod
    
To change organization either:
  * Run coveo auth:login --help to see the available options to log in to a different organization, region, or environment.
  * Run coveo config:set -o=theOtherOrg to run the next commands against theOtherOrg.
"
`;
